--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ group 'EnerDapt'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = 'enerdapt.Main'
 
 sourceCompatibility = 1.8
 
@@ -11,4 +14,19 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+sourceSets{
+    main.java.srcDir "src/main/java"
+    main.resources.srcDir "src/main/resources"
+}
+
+jar {
+    manifest {
+        attributes(
+                'Class-Path': configurations.compile.collect { it.getName()}.join(' '),
+                'Main-Class': 'enerdapt.Main'
+
+        )
+    }
 }
